--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -24,9 +24,6 @@ block content
       //- +head("About me.")
       +main
         section.layout-padding-top.layout-padding-bottom-large.layout-clearfix
-          //- span.layout-margin-horz-left.layout-inline-block= " "
-          //- span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left O
-          //- +p("ne of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... As a child I was curious, and my parents let my curiousity bloom. In high school I discovered a passion for engineering specifically the engineering of robots (which I later found out to be <strong>Mechatronics</strong>). <br> <br> I am Tenacious & Astute I aim to create only the best, I stop at nothing till the image I have in my mind has been captured in the project. I make sure that in all acts I commit too, I am ready to follow through even if the going gets difficult. I make sure to think things through thoroughly so as to avoid inefficienies. The definition of Astute by the Oxford dictionary is, ​very clever and quick at seeing what to do in a particular situation, especially how to get an advantage. I believe I enbody these traits when working on projects and I would love the oppertunity to show you. <br> <br> I created my portfolio site as a place to display some of the projects I have worked on, and as an easy source to access my resume. For more information")
           h3.h5.style-font-30--device-phone.style-primary-dark.style-bold Hi, I’m Joseph. Nice to meet you.
           //- p(lorem="2" class="layout-margin-dull")
           +p("For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious matrimony to solve societal pain points. <br><br> I am always on my feet looking for the next opportunity. Through continuous improvement, confidence and determination, I seek to achieve my goals. Afterall, the game isn’t changed until the game is played.")
@@ -48,28 +45,34 @@ block content
             class: "layout-shorten-vert style-invert-white"
         })
           div.layout-shorten-horz
-            h3.style-font-30.style-bold.layout-margin-vert-botttom-dull Skills
+            h3.style-font-30.style-bold.layout-margin-vert-botttom-dull Tools of the trade
             //- a
           //- div.layer-center-line
           //- 1st Row
           +row({
-            class: "layout-margin-dull layout-padding-small"
+            class: "layout-margin-dull layout-padding-horz-small"
           })
             +column({
-              class: "layout-col-6"
+              class: "layout-col-6 seperate-tools"
             })
-              ul.layout-margin-vert-dull
-                - for (let i = 0; i < 5; i ++) {
-                  li= i
-                - }
+              div.layout-padding-left-small.layout-margin-bottom-small
+                h5.style-font-20.layout-margin-vert-botttom-dull.style-underline Hardware Development Tools
+                ul.layout-margin-vert-dull
+                  - let arr =  ["SolidWorks", "NX Siemens", "KiCAD", "Fritzing", "NI MultiSim", "LTSpice", "Arduino", "Rapid Prototyping", "Design for Assembly", "Design for Manufacturing"];
+                  - for (let i = 0; i < arr.length; i ++) {
+                    li= arr[i]
+                  - }
 
             +column({
               class: "layout-col-6"
             })
-              ul.layout-margin-vert-dull
-                - for (let i = 0; i < 5; i ++) {
-                  li= i
-                - }
+              div.layout-padding-left-small
+                h5.style-font-20.layout-margin-vert-botttom-dull.style-underline Software Development Tools
+                ul.layout-margin-vert-dull
+                  - let arr =  ["C++", "Python", "Matlab & Simulink", "Visual Studio", "Robot Operating System (ROS)", "Arduino", "Keras", "Anaconda"];
+                  - for (let i = 0; i < arr.length; i ++) {
+                    li= arr[i]
+                  - }
 
 
   //- Static Banner layer
@@ -158,10 +161,10 @@ block content
           class: "layout-shorten-vert"
       })
         div.layout-padding-vert-bottom.layout-contain-small.layout-shorten-horz.layout-contain
-          h3.style-font-30.style-bold Recent Work
+          h3.style-font-30.style-bold My Recent Work
           //- p(lorem="2" class="layout-margin-horz-dull")
           div
-            +p("Here are some of the proof of my work. These include some ongoing and finished research projects, personal projects, as well as some old school and work projects I think you should know about. ")
+            +p("Here are some of the projects I have worked on. These include some ongoing and finished research projects, personal projects, as well as some old school and work projects I think you should know about. ")
         //- div.layer-center-line
         //- 1st Row
         +row({
@@ -176,7 +179,7 @@ block content
               class: "layout-block"
             }, true)(title="The link to the Google Design project page.")
               +tile({
-                title: "Google Design",
+                title: "The Boxer",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
@@ -193,7 +196,7 @@ block content
               class: "layout-block"
             }, true)(title="The link to the Nasa project page.")
               +tile({
-                title: "Nasa",
+                title: "Battery Tester",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
@@ -210,7 +213,7 @@ block content
               class: "layout-block"
             }, true)(title="The link to the Nasa project page.")
               +tile({
-                title: "Nasa",
+                title: "Search and Rescue Robot (SarBot)",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
@@ -227,7 +230,7 @@ block content
               class: "layout-block"
             }, true)(title="The link to the Nasa project page.")
               +tile({
-                title: "Nasa",
+                title: "Ultima Apparel",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
@@ -244,7 +247,7 @@ block content
               class: "layout-block"
             }, true)(title="The link to the Nasa project page.")
               +tile({
-                title: "Nasa",
+                title: "Celestica",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
@@ -271,7 +274,7 @@ block content
       })
         section(class="layout-flex layout-flex-col--device-lt-tablet layout-align-items-center layout-justify-content-center")
           +tile({
-            class: "layer-surface layer-box layout-block layer-tile-outline layer-joseph-img2 layout-left layer-shadow--1",
+            class: "layer-surface layer-box layout-block layer-tile-outline layer-joseph-img3 layout-left layer-shadow--1",
             image: {
               src: "cloudinary/e_sharpen,e_art:hokusai/josephojo-portrait",
               alt: "An image of Joseph Ojo in a suit on a boat.",
@@ -279,12 +282,17 @@ block content
           })
           section.layout-contain-large.style-left
             +head({
-              class: ""
+              class: "layer-relative layout-padding-left-small--device-gt-tablet"
             })
               //- h1.h3.h3.style-font-35--device-phone.style-primary-dark.style-bold.layout-margin-dull Contact
               //- p.style-font-size-large "
-              +p
-                span.layout-margin-horz-right-dull(lorem="2")
+              .clearfix
+                h1.quote.style-secondary.style-font-size-huge
+                  i.action-icon(inline) format_quote
+                +p({
+                  class: "text-above-quote"
+                })
+                  span.layout-margin-horz-right-dull It has been a pleasure having you here. If I may add a couple of things, working with me is equal to a tripled chance at success. I’ve been told that the zeal I have with my projects is strong and unwavering. Therefore, if you are looking for persistence, I’m your guy. I am also very goal focused. I like to plan and accomplish, and I hope you are too. So, let’s get this motorized ball rolling!
               p.style-center.style-italic.layout-padding-vert-top-large Signature
 
               //- span.layout-margin-horz-left.layout-inline-block= " "
