added pages for projects

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -175,16 +175,16 @@ block content
             class: "layout-col-4 layout-padding-small"
           })
             +link({
-              href: "/projects/google-designs",
+              href: "/projects/the-boxer",
               class: "layout-block"
-            }, true)(title="The link to the Google Design project page.")
+            }, true)
               +tile({
                 title: "The Boxer",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
-                  src: "cloudinary/engineer-piping",
-                  alt: "An image of large pipes for a Power Plant from Unsplash.",
+                  src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
+                  alt: "An image of a rendered robot."
                 }
               })
 
@@ -192,16 +192,16 @@ block content
             class: "layout-col-4 layout-padding-small layout-padding-vert-large"
           })
             +link({
-              href: "/projects/nasa",
+              href: "/projects/battery-tester",
               class: "layout-block"
-            }, true)(title="The link to the Nasa project page.")
+            }, true)
               +tile({
                 title: "Battery Tester",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
-                  src: "cloudinary/aerial-photo-of-brown-mountains",
-                  alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
+                  src: "cloudinary/joseph-projects/battery_tester/BatteryTester_Diag",
+                  alt: "An image of the battery testing workstation box.",
                 }
               })
 
@@ -209,16 +209,16 @@ block content
             class: "layout-col-4 layout-padding-small layout-padding-vert-large"
           })
             +link({
-              href: "/projects/nasa",
+              href: "/projects/sarbot",
               class: "layout-block"
-            }, true)(title="The link to the Nasa project page.")
+            }, true)
               +tile({
                 title: "Search and Rescue Robot (SarBot)",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
-                  src: "cloudinary/aerial-photo-of-brown-mountains",
-                  alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
+                  src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
+                  alt: "An image of a 3D model of Sarbot.",
                 }
               })
 
@@ -226,28 +226,45 @@ block content
             class: "layout-col-4 layout-padding-small layout-padding-vert-large"
           })
             +link({
-              href: "/projects/nasa",
+              href: "/projects/ultima-apparel",
               class: "layout-block"
-            }, true)(title="The link to the Nasa project page.")
+            }, true)
               +tile({
                 title: "Ultima Apparel",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
-                  src: "cloudinary/aerial-photo-of-brown-mountains",
-                  alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
+                  src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
+                  alt: "An image of Ultima Apparels first proof of concept.",
                 }
               })
 
           +column({
-            class: "layout-col-4 layout-padding-small layout-padding-vert-large"
+            class: "layout-col-8 layout-padding-small layout-padding-vert-large"
           })
             +link({
-              href: "/projects/nasa",
+              href: "/projects/celestica",
+              class: "layout-block"
+            }, true)
+              +tile({
+                title: "Celestica",
+                class: "layer-box layer-surface layout-block layer-tile-outline",
+                image: {
+                  class: "effect-parallax",
+                  src: "cloudinary/joseph-projects/celestica/New_Solar_Panel_1-03",
+                  alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
+                }
+              })
+
+          +column({
+            class: "layout-col-12 layout-padding-small layout-padding-vert-large"
+          })
+            +link({
+              href: "/projects/publications",
               class: "layout-block"
             }, true)(title="The link to the Nasa project page.")
               +tile({
-                title: "Celestica",
+                title: "Publications",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
@@ -293,7 +310,7 @@ block content
                   class: "text-above-quote"
                 })
                   span.layout-margin-horz-right-dull It has been a pleasure having you here. If I may add a couple of things, working with me is equal to a tripled chance at success. I’ve been told that the zeal I have with my projects is strong and unwavering. Therefore, if you are looking for persistence, I’m your guy. I am also very goal focused. I like to plan and accomplish, and I hope you are too. So, let’s get this motorized ball rolling!
-              p.style-center.style-italic.layout-padding-vert-top-large Signature
+              //- p.style-center.style-italic.layout-padding-vert-top-large Signature
 
               //- span.layout-margin-horz-left.layout-inline-block= " "
               //- span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left O
