--- a/views/pages/projects/publications.pug
+++ b/views/pages/projects/publications.pug
@@ -4,21 +4,21 @@ block pageInfo
   -
     let page = {
       websiteURL,
-      url: "/projects/ultima-apparel",
-      name: "ultima-apparel",
-      title: "Ultima Apparel — Clothes for good health, for the modern person.",
-      description: "Ultima Apparel, a project that I took on with a few friends, to create an amazing line of clothing that ensured better health for the user, by giving them the information they need to make better decisions."
+      url: "/projects/publications",
+      name: "publications",
+      title: "Publications — Academic Publications.",
+      description: "I worked with ... Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt..."
     };
 
 block content
   //- Banner layer
   +banner({
-    title: "Ultima Apparel",
-    content: "Apparel that ensures good health through modern means.",
+    title: "Publications — Academic Publications.",
+    content: "I worked with ... Lorem Ipsium dolor sit amet, tempor...",
     image: {
       class: "effect-parallax hero-img",
-      src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
-      alt: "An image of Ultima Apparels first proof of concept.",
+      src: "cloudinary/aerial-photo-of-brown-mountains",
+      alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
     }
   })
 
@@ -34,7 +34,7 @@ block content
       })
         +p
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
-          span.layout-inline.layout-margin-dull project I took on with a few friends, to create an amazing line of clothing that ensured better health for the user, by giving them the information they need to make better decisions.As a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
+          span.layout-inline.layout-margin-dull s a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
           span.layout-inline.layout-margin-dull(lorem="1")
           p.layout-inline.layout-margin-dull(lorem="3")
           span.layout-inline.layout-margin-dull  Some more electrical, lorem ipsum dolor,
@@ -47,7 +47,7 @@ block content
 
   //- Next page layer
   +link({
-    href: "/projects/celestica",
+    href: "/projects/the-boxer",
     class: "layout-block"
   }, true)
     +layer({
@@ -63,13 +63,13 @@ block content
         +main({
           class: "layout-padding-vert-sub-large--device-gt-tablet"
         })
-          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Celestica
+          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height The Boxer
 
         +tile({
           class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
           image: {
             class: "effect-parallax",
-            src: "cloudinary/joseph-projects/celestica/New_Solar_Panel_1-03",
-            alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
+            src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
+            alt: "An image of a rendered robot."
           }
         })
