small changes to boxer

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -175,11 +175,11 @@ block content
             class: "layout-col-4 layout-padding-small"
           })
             +link({
-              href: "/projects/the-boxer",
+              href: "/projects/boxer",
               class: "layout-block"
             }, true)
               +tile({
-                title: "The Boxer",
+                title: "Boxer",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
@@ -304,8 +304,8 @@ block content
               //- h1.h3.h3.style-font-35--device-phone.style-primary-dark.style-bold.layout-margin-dull Contact
               //- p.style-font-size-large "
               .clearfix
-                h1.quote.style-secondary.style-font-size-huge
-                  i.action-icon(inline) format_quote
+                //- h1.quote.style-secondary.style-font-size-huge
+                //-   i.action-icon(inline) format_quote
                 +p({
                   class: "text-above-quote"
                 })
