--- a/views/pages/projects.pug
+++ b/views/pages/projects.pug
@@ -62,11 +62,11 @@ block content
             class: "layout-col-12 layout-padding-small"
           })
             +link({
-              href: "/projects/the-boxer",
+              href: "/projects/boxer",
               class: "layout-block"
             }, true)
               +tile({
-                title: "The Boxer",
+                title: "Boxer",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
