--- a/views/pages/projects/boxer.pug
+++ b/views/pages/projects/boxer.pug
@@ -4,16 +4,16 @@ block pageInfo
   -
     let page = {
       websiteURL,
-      url: "/projects/the-boxer",
-      name: "the-boxer",
-      title: "The Boxer — A project about robots.",
+      url: "/projects/boxer",
+      name: "boxer",
+      title: "Boxer — A project about robots.",
       description: "I worked with ... Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt..."
     };
 
 block content
   //- Banner layer
   +banner({
-    title: "The Boxer — A project I did with ...",
+    title: "Boxer — A project I did with ...",
     content: "I worked with ... Lorem Ipsium dolor sit amet, tempor...",
     image: {
       class: "effect-parallax hero-img",
