--- a/views/pages/projects/publications.pug
+++ b/views/pages/projects/publications.pug
@@ -47,7 +47,7 @@ block content
 
   //- Next page layer
   +link({
-    href: "/projects/the-boxer",
+    href: "/projects/boxer",
     class: "layout-block"
   }, true)
     +layer({
@@ -63,7 +63,7 @@ block content
         +main({
           class: "layout-padding-vert-sub-large--device-gt-tablet"
         })
-          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height The Boxer
+          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Boxer
 
         +tile({
           class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
